--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 	<dependencies>
 	
 				<dependency>
+  					<groupId>javax.annotation</groupId>
+  					<artifactId>javax.annotation-api</artifactId>
+  					<version>1.3.2</version>
+				</dependency>
+
+				<dependency>
 					<groupId>javax.servlet</groupId>
 					<artifactId>jstl</artifactId>
 					<version>1.2</version>
